[build-system]
requires = ["setuptools>=61.0","matplotlib<3.8.0","numpy","pandas>=1.3.5", "scipy","fastcluster"]
build-backend = "setuptools.build_meta"

[project]
name = "PyComplexHeatmap"
version = "1.6.5"
authors = [
  { name="Wubin Ding", email="ding.wu.bin.gm@gmail.com" },
]
description = "A python package to plot complex heatmap"
keywords = ["ComplexHeatmap", "heatmap"]
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/DingWB/PyComplexHeatmap"
repository = "https://github.com/DingWB/PyComplexHeatmap"
"Bug Tracker" = "https://github.com/DingWB/PyComplexHeatmap/issues"
documentation = "https://dingwb.github.io/PyComplexHeatmap"

