[build-system]
requires = ["setuptools>=61.0","matplotlib<3.8.0","numpy","pandas>=1.3.5", "scipy","fastcluster","wheel","setuptools_scm[toml]>=6.2","palettable"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
write_to = 'PyComplexHeatmap/_version.py'

[project]
name = "PyComplexHeatmap"
dynamic = ["version"]
authors = [
  { name="Wubin Ding", email="ding.wu.bin.gm@gmail.com" },
]
description = "A python package to plot complex heatmap"
keywords = ["ComplexHeatmap", "heatmap"]
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/DingWB/PyComplexHeatmap"
repository = "https://github.com/DingWB/PyComplexHeatmap"
"Bug Tracker" = "https://github.com/DingWB/PyComplexHeatmap/issues"
documentation = "https://dingwb.github.io/PyComplexHeatmap"

